--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,107 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap');
+:root {
+--sidebar-flex:1.5;
+--condiv-flex:6;
+--fontsize-p:1.2rem;
+--fontsize-nav:1.6rem;
+--typing-font:3rem;
+}
+* {
+margin:0;
+padding: 0;
+}
+body {
+font-family: 'Raleway';
+}
+.App {
+display: flex;
+width: 100vw;
+min-height: 100vh;
+}
+
+nav {
+  padding: 60px 30px 0px 30px ;
+  flex:var(--sidebar-flex);
+  background:rgb(218, 218, 218);
+  background: linear-gradient(to bottom, rgb(223, 223, 223, 1), rgba(245,245,245,1) 80% 80%);
+}
+/* .condiv class is for the right side content container*/
+.condiv {
+padding: 100px ;
+background-color: #f4f5f9;
+flex:var(--condiv-flex);
+}
+.home {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.avatar {
+  border-radius: 5em/5em;
+  width: 350px;
+  margin: 30px;
+}
+.typingeffect {
+  font-size: var(--typing-font);
+  margin-bottom: 30px;
+}
+
+
+nav ul {
+  font-size:var(--fontsize-nav) ;
+  text-align: center;
+  list-style-type: none;
+  text-decoration: none;
+  color: white !important;
+}
+nav ul li {
+  margin: 40px;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
+.subtopic {
+  margin:10px 10px 30px 10px !important;
+}
+p {
+  font-size: var(--fontsize-p);
+}
+h1,h2,h3,h4,p {
+  margin: 10px;
+}
+
+.social {
+  position: absolute;
+  margin-top: 20px;
+  display: flex;
+  bottom: 60px;
+}
+.social i {
+  padding-right: 30px;
+  font-size: 25px;
+  color: #9a9b9c;
+}
+.social i:hover {
+  color: #ffffff;
+}
+.widecard {
+  border:0px solid #9a9b9c;
+  display: flex;
+  margin:30px 0px 30px 0px;
+}
+.widecard:hover {
+  color: #1b1d20;
+  background-color: #ffffff;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0.0.0.0,23);
+}
+.active {
+  font-weight: bolder;
+}
+
+/* Default styles
+
 .App {
   text-align: center;
 }
@@ -36,3 +140,4 @@
     transform: rotate(360deg);
   }
 }
+*/
